# QtLocationPlugin

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  MULTI_LAYER_USAGE.md  QGCLocation.qrc  QGCMapEngine.cpp  QGCMapEngineManager.cc  QGCMapUrlEngine.cpp  QGeoServiceProviderPluginQGC.cpp  QGeoTileFetcherQGC.cpp  QGeoTiledMapQGC.cpp  README.md
Inc/: QGCMapEngine.h  QGCMapLayerConfig.h  QGCTileCacheWorker.h  QGCTileCompositor.h  QGeoFileTileCacheQGC.h  QGeoMapReplyQGC.h  QGeoMultiLayerMapReplyQGC.h  QGeoTileFetcherQGC.h  QGeoTiledMapQGC.h  QGeoTiledMappingManagerEngineQGC.h
Inc/Providers/: GaoDeMapProvider.h  GenericMapProvider.h  MapProvider.h  TiandiMapProvider.h  TmsMapProvider.h
Providers/: MapboxMapProvider.cpp
Src/: QGCCachedTileSet.cpp  QGCFileDownload.cc  QGCMapEngine.cpp  QGCMapEngineManager.cc  QGCMapLayerConfig.cpp  QGCMapUrlEngine.cpp  QGCTileCacheWorker.cpp  QGCTileCompositor.cpp  QGeoFileTileCacheQGC.cpp  QGeoMapReplyQGC.cpp  QGeoMultiLayerMapReplyQGC.cpp  QGeoServiceProviderPluginQGC.cpp  QGeoTileFetcherQGC.cpp  QGeoTiledMapQGC.cpp  QGeoTiledMappingManagerEngineQGC.cpp  QmlObjectListModel.cc
Src/Providers/: BingMapProvider.cpp  ElevationMapProvider.cpp  EsriMapProvider.cpp  GaoDeMapProvider.cpp  GenericMapProvider.cpp  GoogleMapProvider.cpp  MapProvider.cpp  MapboxMapProvider.cpp  TiandiMapProvider.cpp  TmsMapProvider.cpp
Test/: CMakeLists.txt  Main.qml  main.cpp
